public/stylesheets/sass/footer.scss
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 260px;
    background-color: $blue-gray;
    padding-top: 40px;
    color: $white;
    a, h2 {
        color: $white;
        font-family: 'Roboto', san-serif;
    }
    h2 {
        font-size: 30px;
    }
    img {
        max-width: 200px;
    }
    .fa{
        font-size: 40px;
        padding-right: 15px;
    }
    ul {
        padding: 0;
    }
    li {
        list-style: none;
        font-size: 20px;
        font-weight: 300;
        padding: 6px 0;
    }
}

#social-links {
    padding-top: 20px;
    img {
        padding-right: 10px;
    }
    a, img {
        text-decoration: none;
    }
}

#wizio_address {
    font-size: 20px;
    font-weight: 300;
    margin-top: 30px;
}

body {
    margin-bottom: 300px; // footer height
}
@media (max-width: 767px) {
    /* Set the fixed height of the footer here
       for mobile screens */
    body {
        margin-bottom: 700px;
    }
    .footer {
        height: 700px;
    }
}

